Fix: Force all drawer menu icons to same width (22px) for perfect alignment

--- a/client/src/CSS/Navbar.css
+++ b/client/src/CSS/Navbar.css
@@ -148,11 +148,22 @@
 /* Icon Styling - Căn đều và đồng màu */
 .drawer-menu .ant-menu-item-icon {
   font-size: 18px;
-  min-width: 18px;
+  min-width: 22px;
+  width: 22px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   color: #595959;
+}
+
+/* Force all anticon to same size */
+.drawer-menu .anticon {
+  font-size: 18px !important;
+  width: 22px;
+  height: 22px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .drawer-menu .ant-menu-item-selected .ant-menu-item-icon,
